--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "githubfinder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://panchalmanish2208.github.io/githubfinder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
